--- a/css/style.css
+++ b/css/style.css
@@ -139,6 +139,9 @@ body{
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    /*haciendo que el footer quede siempre abajo*/
+    display: grid;
+    grid-template-rows: auto 1fr auto;
 
 }
 
@@ -256,15 +259,23 @@ section img {
 
 /*ESTILOS FORMULARIOS*/
 
+div.container{
+    padding-bottom: 100px;
+}
+
+.boton{
+    margin: 20px 7px 0 7px;
+    background-color: #0E0D38;
+}
 
 /*FIN ESTILOS FORMULARIOS*/
 
 
 
 /* ESTILO DE FOOTER */
-footer{
+
+footer {
     width: 100%;
-    /* position: absolute; */
     bottom: 0;
     left: 0;
     padding: 2rem 8%;
@@ -297,6 +308,7 @@ footer h3 a{
     
 }
 
+
 footer div.contenedor.redes a.icono-redes i{
     color: white;
     background-color: aliceblue;
@@ -318,88 +330,6 @@ footer h3 a:hover{
     text-align: center;
 }
 
-/* footer{
-    background-color: #0E0D38;
-    height: auto;
-    width: 100%;
-    font-family:Arial, Helvetica, sans-serif;
-    padding-top: 40px;
-    color: white;
-    margin-top: auto;
-
+textarea.tamaño{
+    resize: none;
 }
-
-.footer-content{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
-}
-
-.footer-content h3{
-    font-family: "Museum";
-    font-size: 1.8rem;
-    font-weight: 400;
-    text-transform: capitalize;
-    line-height: 3rem;
-}
-
-.footer-content p{
-    max-width: 500px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 1rem 0 3rem 0;
-}
-
-.social{
-    list-style: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 1rem 0 3rem 0;
-}
-
-.social li {
-    margin: 0 10px;
-}
-
-.social a {
-    text-decoration: none;
-    color: #fff;
-
-}
-
-.social a i{
-    font-size: 1.1rem;
-    ;
-}
-
-.social a:hover{
-    color: #e3c939;
-
-}
-
-.footer-bottom{
-    background: #070621;
-    width: 100%;
-    padding: 20px 0;
-    text-align: center;
-}
-
-.footer-bottom p{
-    font-size: 14px;
-    text-transform: capitalize;
-}
-
-.footer-bottom span{
-    text-transform: uppercase;
-    opacity: .4;
-    font-weight: 200;
-
-}
- */
-
-
-/* FIN ESTILO DE FOOTER */
