--- a/css/style.css
+++ b/css/style.css
@@ -1,266 +1,255 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    list-style: none;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style: none;
 }
 
 @font-face {
-    font-family:"Museum";
-    src: url(../font/LTMuseum-Bold.ttf);
+  font-family: "Museum";
+  src: url(../font/LTMuseum-Bold.ttf);
 }
-
-/* ESTILO DEL HEADER */
-nav{
-    background-color:#0E0D38 ;
-    height: 80px;
-    width: 100%;
+/*ESTILOS HEADER*/
+nav {
+  background-color: #0E0D38;
+  width: 100%;
+  height: 80px;
 }
-.enlace {
-    position: absolute;
-    padding:20px 50px ;
+nav .enlace {
+  position: absolute;
+  padding: 20px 50px;
 }
-.logo {
-    height: 40px;
+nav .enlace .logo {
+  height: 40px;
 }
 nav ul {
-    float: right;
-    margin-right: 20px;
+  float: right;
+  margin-right: 20px;
 }
 nav ul li {
-    display: inline-block;
-    line-height: 80px;
-    margin: 0 5px;
+  display: inline-block;
+  line-height: 80px;
+  margin: 0 5px;
 }
-nav ul li a{
-    color:white;
-    font-size: 23px;
-    padding: 7px 7px;
-    text-transform: uppercase;
-    font-family: "Museum";
-    text-decoration: none;
+nav ul li:hover {
+  transform: scale(1.1);
 }
-.menu ul li:hover{
-    transform: scale(1.1);
+nav ul li a {
+  color: white;
+  font-size: 23px;
+  padding: 7px 7px;
+  text-transform: uppercase;
+  font-family: "Museum";
+  text-decoration: none;
 }
-.menu ul li a:hover{
-    color: #e3c939;
-    transform: scale(1.1);
+nav ul li a:hover {
+  color: #e3c939;
+  transform: scale(1.1);
 }
-.menu-icon{
-    font-size: 30px;
-    float: right;
-    line-height: 80px;
-    margin-right: 20px;
-    cursor: pointer;
-    display: none;  
+nav .menu-icon {
+  font-size: 30px;
+  float: right;
+  line-height: 80px;
+  margin-right: 20px;
+  cursor: pointer;
+  display: none;
 }
-#check{
-    display: none;
+nav #check {
+  display: none;
 }
-@media (max-width:1048px) {
-    .enlace{
-        padding-left: 21px;
-    }
-    nav ul li a {
-        font-size: 18px;
-    }
-}
-@media (max-width:952px) {
-    .enlace{
-        padding-left: 19px;
-    }
-    nav ul li a {
-        font-size: 18px;
-    }
-}
-@media (max-width:858px) {
-    .menu-icon{
-        display: block;
-    }
-    ul{
-        position:fixed;
-        width: 100%;
-        height: 100vh;
-        background-color: #0E0D38;
-        top: 80px;
-        left: 100%;
-        text-align: center;
-        transition: all .5s;  
-    }
-    nav ul li{
-        display: block;
-        margin: 50px 0;
-        line-height: 30px;
-        
-    }
-    nav ul li a{
-        font-size: 20px;
-        
-    }
-    li a:hover{
-        color: #e3c939;
-        transform: scale(1.1);
-    }
-    #check:checked ~ ul{
-        left: 0;
-    }
-}
-/* FIN DEL ESTILO DE HEADER */
 
+/*FIN ESTILOS HEADER*/
 /*ESTILOS BODY*/
-body{
-    background-color: #203A73;
-    color: white;
-    font-size: 22px;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    /*haciendo que el footer quede siempre abajo*/
-    display: grid;
-    grid-template-rows: auto 1fr auto;
+body {
+  background-color: #203A73;
+  color: white;
+  font-size: 22px;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  /*haciendo que el footer siempre quede abajo*/
+  display: grid;
+  grid-template-rows: auto 1fr auto;
 }
-h1  {
-    font-family: "Museum";
-    color: #d9be24;
-    display:block;
-    justify-content: center;
-    text-align: center;  
-    margin:10px;
+body h1, body h2 {
+  font-family: "Museum";
+  color: #d9be24;
+  display: block;
+  text-align: center;
+  margin: 10px;
 }
-h2  {
-    font-family: "Museum";
-    color: #d9be24;
-    display:block;
-    text-align: center;
-    margin:10px;
+body section {
+  text-align: center;
+  margin: 10px;
+  padding: 10px;
 }
-section {
-    text-align: center;
-    margin: 10px;
-    padding: 10px;
-}
-section img {
-    display: inline-block;
-    width: 240px;
-    height: 390px;
-    border: 1px solid whitesmoke;
+body section img {
+  display: inline-block;
+  width: 240px;
+  height: 390px;
+  border: 1px solid whitesmoke;
 }
 
-/* Estilo de los textos explicativos*/
-.texto-index, .texto-experience, .texto-roam, .texto-middle, .texto-jungle, .texto-gold, .texto-contacto{
-    text-align: justify;
-    margin-bottom:10px ;  
-    font-size: 17px; 
-}
-.index, .experience, .roam, .middle, .jungle, .gold{
-    color: #e4c829;
-    font-family: 'Museum';
-    font-size:  1.125em;  
-}
 .desarrollo {
-    max-width: 900px;
-    margin: 0 auto;
-    padding: 20px;
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 20px;
 }
-@media (wax-width:600px){
-    h1 {
-        font-size: 20px;
-    }
-    .texto-index, .texto-experience, .texto-roam, .texto-middle, .texto-jungle, .texto-gold, .texto-contacto{
-        font-size: 16px;
-    }
+.desarrollo .texto-index, .desarrollo .texto-experience, .desarrollo .texto-roam, .desarrollo .texto-middle, .desarrollo .texto-jungle, .desarrollo .texto-gold, .desarrollo .texto-contacto {
+  text-align: justify;
+  margin-bottom: 10px;
+  font-size: 17px;
 }
-@media (wax-width:768px){
-    h1 {
-        font-size: 22px;
-    }
-    .texto-index, .texto-experience, .texto-roam, .texto-middle, .texto-jungle, .texto-gold, .texto-contacto{
-        font-size: 18px;
-    }
+.desarrollo .index, .desarrollo .experience, .desarrollo .roam, .desarrollo .middle, .desarrollo .jungle, .desarrollo .gold {
+  color: #E4C829;
+  font-family: "Museum";
+  font-size: 1.125rem;
 }
-@media (wax-width:1024px){
-    h1 {
-        font-size: 28px;
-    }
-    .texto-index, .texto-experience, .texto-roam, .texto-middle, .texto-jungle, .texto-gold, .texto-contacto{
-        font-size: 20px;
-    }
-}
-/*FIN ESTILOS textos explicativos*/
 
 /*ESTILOS GALERIAS*/
 #galeria img {
-    width:100%;
-    height: auto;
-    border: 1px solid whitesmoke ;
+  width: 100%;
+  height: auto;
+  border: 1px solid whitesmoke;
 }
-#galeria .col-6{
-    margin: 0;
-    padding: 5px;
+#galeria .col-6 {
+  margin: 0;
+  padding: 5px;
 }
-/* FIN ESTILOS GALERIAS*/
 
+/*FIN ESTILOS GALERIAS*/
 /*FIN ESTILOS BODY*/
-
 /*ESTILOS FORMULARIOS*/
-div.container{
-    padding-bottom: 100px;
+.container {
+  padding-bottom: 100px;
 }
-.boton{
-    margin: 20px 7px 0 7px;
-    background-color: #0E0D38;
+.container .boton {
+  margin: 20px 7px 0 7px;
+  background-color: #0E0D38;
 }
-/*FIN ESTILOS FORMULARIOS*/
+.container textarea {
+  resize: none;
+}
 
-/* ESTILO DE FOOTER */
+/*FIN ESTILOS FORMULARIOS*/
+/*ESTILOS FOOTER*/
 footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  padding: 2rem 8%;
+  background-color: #0E0D38;
+  flex-direction: column;
+}
+footer .juego {
+  font-family: "Museum";
+  font-size: 30px;
+  margin-bottom: 1rem;
+}
+footer .juego a {
+  text-decoration: none;
+}
+footer .juego a:hover {
+  color: #e3c939;
+}
+footer .contenedor-redes {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-bottom: 1rem;
+}
+footer .contenedor-redes .icono-redes i {
+  width: 40px;
+  height: 40px;
+}
+footer .contenedor-redes .icono-redes:hover {
+  color: #e3c939;
+}
+footer .copyright {
+  color: #f2f2f2;
+  opacity: 0.3;
+  text-align: center;
+}
+
+/*FIN ESTILOS FOOTER*/
+/*Media del nav*/
+@media (max-width: 1048px) {
+  nav .enlace {
+    padding-left: 21px;
+  }
+  nav ul li a {
+    font-size: 18px;
+  }
+}
+@media (max-width: 952px) {
+  nav .enlace {
+    padding-left: 19px;
+  }
+  nav ul li a {
+    font-size: 18px;
+  }
+}
+@media (max-width: 858px) {
+  nav .menu-icon {
+    display: block;
+  }
+  nav ul {
+    position: fixed;
     width: 100%;
-    bottom: 0;
-    left: 0;
-    padding: 2rem 8%;
-    background-color: #0E0D38;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-footer h3 a{
-    text-decoration: none;
-}
-.juego {
-    font-family: "Museum";
-    font-size: 30px;
-    margin-bottom: 1rem;
-}
-.contenedor.redes{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    margin-bottom: 1rem;
-}
-.icono-redes a i{
-    width: 40px;
-    height: 40px;
-    
-}
-footer div.contenedor.redes a.icono-redes i{
-    color: white;
-    background-color: aliceblue;
-}
-footer h3 a:hover{
-    color: #e3c939;
-}
-.icono-redes:hover{
-    color: #e3c939;
-}
-.copyright {
-    color:#f2f2f2;
-    opacity: .3s;
+    height: 100vh;
+    background-color: #0e0d38;
+    top: 80px;
+    left: 100%;
     text-align: center;
+    transition: 0.5s;
+  }
+  nav ul li {
+    display: block;
+    margin: 50px 0;
+    line-height: 30px;
+  }
+  nav ul li a {
+    font-size: 20px;
+  }
+  nav ul li a:hover {
+    color: #e3c939;
+    transform: scale(1.1);
+  }
+  #check:checked ~ ul {
+    left: 0;
+  }
 }
-textarea.tamaño{
-    resize: none;
+/*Fin media queries del nav*/
+/*Media queries textos*/
+@media (wax-width: 600px) {
+  h1, body h2 {
+    font-size: 20px;
+  }
+  .texto-index, .texto-experience, .texto-roam, .texto-middle, .texto-jungle, .texto-gold, .texto-contacto {
+    font-size: 16px;
+  }
 }
+@media (wax-width: 768px) {
+  h1, body h2 {
+    font-size: 22px;
+  }
+  .texto-index, .texto-experience, .texto-roam, .texto-middle, .texto-jungle, .texto-gold, .texto-contacto {
+    font-size: 18px;
+  }
+}
+@media (wax-width: 1024px) {
+  h1, body h2 {
+    font-size: 28px;
+  }
+  .texto-index, .texto-experience, .texto-roam, .texto-middle, .texto-jungle, .texto-gold, .texto-contacto {
+    font-size: 20px;
+  }
+}
+/*Fin de las Media queries textos*/
+
+/*# sourceMappingURL=style.css.map */
