Probando una pseudoclase

--- a/scss/partials/_queries.scss
+++ b/scss/partials/_queries.scss
@@ -53,7 +53,7 @@
                 a{
                     font-size: 20px;
 
-                    &:hover{
+                    &:active{
                         color: #e3c939;
                         transform: scale(1.1);
                     }
