--- a/css/style.css
+++ b/css/style.css
@@ -216,7 +216,7 @@ footer .copyright {
   nav ul li a {
     font-size: 20px;
   }
-  nav ul li a:hover {
+  nav ul li a:active {
     color: #e3c939;
     transform: scale(1.1);
   }
