corrigiendo el menu

--- a/css/style.css
+++ b/css/style.css
@@ -11,13 +11,16 @@
   src: url(../font/LTMuseum-Bold.ttf);
 }
 /*ESTILOS HEADER*/
+header {
+  z-index: 100;
+}
+
 nav {
   background-color: #0E0D38;
   width: 100%;
   height: 80px;
 }
 nav .menu {
-  z-index: 100;
   position: absolute;
   overflow: hidden;
 }
@@ -127,6 +130,10 @@ div.campo:active {
 
 /*FIN ESTILOS INDEX*/
 /*ESTILOS GALERIAS*/
+#galeria {
+  position: relative;
+  z-index: 50;
+}
 #galeria img {
   width: 100%;
   height: auto;
@@ -220,7 +227,7 @@ footer .copyright {
   nav ul {
     position: fixed;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-color: #0e0d38;
     top: 80px;
     left: 100%;
