--- a/scss/partials/_queries.scss
+++ b/scss/partials/_queries.scss
@@ -38,7 +38,7 @@
         ul{
             position: fixed;
             width: 100%;
-            height: 100vh;
+            height: 100%;
             background-color:#0e0d38;
             top: 80px;
             left: 100%;
