--- a/scss/partials/_queries.scss
+++ b/scss/partials/_queries.scss
@@ -95,3 +95,25 @@
     }
 }
 /*Fin de las Media queries textos*/
+
+/*media de la imagen del index*/
+@media (wax-width:952px){
+    .mapa-index{
+        width: 700px;
+        height: auto;
+    }
+}
+
+@media (wax-width:768px){
+    .mapa-index{
+        width: 600px;
+        height: auto;
+    }
+}
+
+@media (wax-width:600px){
+    .mapa-index{
+        width: 400px;
+        height: auto;
+    }
+}
