--- a/scss/style.scss
+++ b/scss/style.scss
@@ -138,7 +138,9 @@ div.campo{
     justify-content: center;
 
     img.mapa-index{
-        @include sizes (700px,auto)
+        @include sizes (700px,auto);
+        padding: 7px;
+        
     }
 
     &:active{
@@ -157,7 +159,7 @@ div.campo{
 
     .col-6{
         margin: 0;
-        padding: 5px;
+        padding: 7px;
     }
 }
 /*FIN ESTILOS GALERIAS*/
