agregando margen a foto del index

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -139,7 +139,7 @@ div.campo{
 
     img.mapa-index{
         @include sizes (700px,auto);
-        padding: 7px;
+        margin:7px;
         
     }
 
