--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@ div.campo {
 div.campo img.mapa-index {
   width: 700px;
   height: auto;
-  padding: 7px;
+  margin: 7px;
 }
 div.campo:active {
   transform: scale(1.3);
