--- a/scss/partials/_queries.scss
+++ b/scss/partials/_queries.scss
@@ -101,6 +101,7 @@
     .mapa-index{
         width: 700px;
         height: auto;
+        margin: 7px;
     }
 }
 
@@ -108,6 +109,7 @@
     .mapa-index{
         width: 600px;
         height: auto;
+        margin: 7px;
     }
 }
 
@@ -115,5 +117,6 @@
     .mapa-index{
         width: 200px;
         height: auto;
+        margin: 7px;
     }
 }
