mejorando el codigo

--- a/css/style.css
+++ b/css/style.css
@@ -280,21 +280,21 @@ footer .copyright {
 /*Fin de las Media queries textos*/
 /*media de la imagen del index*/
 @media (wax-width: 952px) {
-  .mapa-index {
+  div .mapa-index {
     width: 700px;
     height: auto;
     margin: 7px;
   }
 }
 @media (wax-width: 768px) {
-  .mapa-index {
+  div .mapa-index {
     width: 600px;
     height: auto;
     margin: 7px;
   }
 }
 @media (wax-width: 500px) {
-  .mapa-index {
+  div .mapa-index {
     width: 180px;
     height: auto;
     margin: 7px;
