--- a/scss/partials/_queries.scss
+++ b/scss/partials/_queries.scss
@@ -98,25 +98,34 @@
 
 /*media de la imagen del index*/
 @media (wax-width:952px){
-    .mapa-index{
-        width: 700px;
-        height: auto;
-        margin: 7px;
+    div{
+        .mapa-index{
+            width: 700px;
+            height: auto;
+            margin: 7px;
+        }
     }
+    
 }
 
 @media (wax-width:768px){
-    .mapa-index{
-        width: 600px;
-        height: auto;
-        margin: 7px;
+    div{
+        .mapa-index{
+            width: 600px;
+            height: auto;
+            margin: 7px;
+        }
     }
+    
 }
 
 @media (wax-width:500px){
-    .mapa-index{
-        width: 180px;
-        height: auto;
-        margin: 7px;
+    div{
+        .mapa-index{
+            width: 180px;
+            height: auto;
+            margin: 7px;
+        }
     }
+    
 }
