--- a/css/style.css
+++ b/css/style.css
@@ -300,7 +300,7 @@ footer .copyright {
 }
 @media (wax-width: 400px) {
   div .mapa-index {
-    width: 200px;
+    width: 50%;
     height: auto;
     margin: 7px;
   }
