--- a/scss/partials/_queries.scss
+++ b/scss/partials/_queries.scss
@@ -122,10 +122,9 @@
 @media (wax-width:400px){
     div{
         .mapa-index{
-            width: 200px;
+            width:50%;
             height: auto;
             margin: 7px;
         }
     }
-    
 }
