--- a/css/style.css
+++ b/css/style.css
@@ -285,21 +285,21 @@ footer .copyright {
 /*Fin de las Media queries textos*/
 /*media de la imagen del index*/
 @media (wax-width: 858px) {
-  div .mapa-index {
+  div img.mapa-index {
     width: 600px;
     height: auto;
     margin: 7px;
   }
 }
 @media (wax-width: 600px) {
-  div .mapa-index {
+  div img.mapa-index {
     width: 200px;
     height: auto;
     margin: 7px;
   }
 }
 @media (wax-width: 400px) {
-  div .mapa-index {
+  div img.mapa-index {
     width: 95px;
     height: auto;
     margin: 7px;
