--- a/scss/partials/_queries.scss
+++ b/scss/partials/_queries.scss
@@ -99,7 +99,7 @@
 /*media de la imagen del index*/
 @media (wax-width:858px){
     div{
-        .mapa-index{
+        img.mapa-index{
             width: 600px;
             height: auto;
             margin: 7px;
@@ -110,7 +110,7 @@
 
 @media (wax-width:600px){
     div{
-        .mapa-index{
+        img.mapa-index{
             width: 200px;
             height: auto;
             margin: 7px;
@@ -121,7 +121,7 @@
 
 @media (wax-width:400px){
     div{
-        .mapa-index{
+        img.mapa-index{
             width:95px;
             height: auto;
             margin: 7px;
