sacando los transform

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -150,9 +150,9 @@ div.campo{
         
     }
 
-    // &:active{
-    //     transform: scale(1.3)
-    // }
+    &:active{
+        transform: scale(1.3)
+    }
 }
 /*FIN ESTILOS INDEX*/
 /*ESTILOS GALERIAS*/
