--- a/css/style.css
+++ b/css/style.css
@@ -130,9 +130,9 @@ div.campo img.mapa-index {
   height: auto;
   margin: 7px;
 }
-/* div.campo:active {
+div.campo:active {
   transform: scale(1.3);
-} */
+}
 
 /*FIN ESTILOS INDEX*/
 /*ESTILOS GALERIAS*/
@@ -296,6 +296,7 @@ footer .copyright {
     width: 200px;
     height: auto;
     margin: 7px;
+    transform: none;
   }
 }
 @media (wax-width: 400px) {
@@ -303,6 +304,7 @@ footer .copyright {
     width: 95px;
     height: auto;
     margin: 7px;
+    transform: none;
   }
 }
 
