--- a/scss/partials/_queries.scss
+++ b/scss/partials/_queries.scss
@@ -114,6 +114,7 @@
             width: 200px;
             height: auto;
             margin: 7px;
+            transform: none;
         }
     }
     
@@ -125,6 +126,7 @@
             width:95px;
             height: auto;
             margin: 7px;
+            transform: none;
         }
     }
 }
