--- a/scss/partials/_queries.scss
+++ b/scss/partials/_queries.scss
@@ -97,36 +97,35 @@
 /*Fin de las Media queries textos*/
 
 /*media de la imagen del index*/
-@media (wax-width:858px){
-    div{
-        img.mapa-index{
-            width: 600px;
-            height: auto;
-            margin: 7px;
-        }
-    }
+// @media (wax-width:858px){
+//     div.campo{
+//         img.mapa-index{
+//             width: 600px;
+//             height: auto;
+//             margin: 7px;
+//         }
+//     }
     
-}
+// }
 
-@media (wax-width:600px){
-    div{
-        img.mapa-index{
-            width: 200px;
-            height: auto;
-            margin: 7px;
-            transform: none;
-        }
-    }
+// @media (wax-width:600px){
+//     div.campo{
+//         img.mapa-index{
+//             width: auto;
+//             height: auto;
+//             margin: 7px;
+//         }
+//     }
     
-}
+// }
 
-@media (wax-width:400px){
-    div{
-        img.mapa-index{
-            width:95px;
-            height: auto;
-            margin: 7px;
-            transform: none;
-        }
-    }
-}
+// @media (wax-width:400px){
+//     div.campo{
+//         display: flex;
+//         img.mapa-index{
+//             height: auto;
+//             padding: 30px;
+//             margin: 20px;
+//         }
+//     }
+// }
